--- a/1.html
+++ b/1.html
@@ -4,29 +4,64 @@
 <head>
 <<title>WEB1 - html</title>
 <meta charset="utf-8">
+<style>
+a {
+	color:black;
+	text-decoration:none;
+}
+	li{
+		color:blue;
+	}
+	p{
+		text-decoration: none;
+	}
+h1{
+	font-size: 60px;
+	text-align:center;
+}
+</style>
+
+
+
 </head>
 
 
 
 <body>
-<h1><a href="index.html">web</a></h1>
-
+<h1><a href="index.html">WEB</a></h1>
+<p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/7T7r_oSp0SE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</p>
 <ol>
-<li><a href="1.html">TML</a></li>
-<li><a href="2.html">CSS</a></li>
+
+<li><a href="1.html">HTML</a></li>
+<li><a href="2.html"style="color:red;text-decoration:underline">CSS</a></li>
 <li><a href="3.html">JavaScript</a></li>
 </ol>
+
+<!--
+<ol>
+<li><a href="1.html"><font color="red">HTML</font></a></li>
+<li><a href="2.html"><font color="red">CSS</font></a></li>
+<li><a href="3.html"><font color="red">JavaScript</font></a></li>
+</ol>
+-->
+
 <ul>
 <li>MUNBOK</li>
 <li>BOK</li>
 <li>VERNS</li>
 </ul>
-<h2><a href="https://www.w3.org/TR/html51/" target="_blank" title="html5.1">TML이란 무엇인가</a></h2>
+
+<h2><a href="https://www.w3.org/TR/html51/" target="_blank" title="html5.1">index란 무엇인가</a></h2>
 <h1>To Kill a mockingbird</h1>
 <h3>Part One</h3>
 <p>When he was nearly thirteen,my brother Jem got his <strong>arm badly <U>broken</u> at the elobow.</strong></p>
 <p style="margin-bottom:20px;">When it healed, and Jem's fears of never being able to play football were assuaged,</p>
 <a href="https://www.facebook.com/messages/t/verna.ramirez.1694" target="_blank"><img src="verns.jpg" width="10%"></a>
 he was seldom self-conscious about his injury.His left arm was somewhat shorter than his right; when he stood or walked, the back of his hand was at right angles to his body,his thumb parallel to his tight. He couldn't have cared lsee, so long as he could pass and punt.
+</p>
+
+
 </body>
 <html>
